--- a/sistema-ponto-flutuante/index.html
+++ b/sistema-ponto-flutuante/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="js/main.js"></script>
-    <title>Document</title>
+    <title>Sistema de Ponto Flutuante</title>
 </head>
 <body>
     <form>
