Mudança do nome para Numbiosis

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cálculo Numérico | UFPB | 2017.2</title>
+    <title>Numbiosis</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Compiled and minified CSS -->
@@ -19,7 +19,7 @@
           <a href="https://github.com/Vnicius/calculo-numerico"
              class="brand-logo center"
              target="blank">
-              Cálculo Numérico
+             Numbiosis
           </a>
           <!-- <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="sass.html">Repositório</a></li>
