--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="card-action">
               <a href="coversor">Site</a>
-              <a href="#">Código</a>
+              <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
             </div>
           </div>
         </div>
@@ -60,8 +60,8 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="#">Site</a>
-              <a href="#">Código</a>
+              <a href="sistema-ponto-flutuante">Site</a>
+              <a href="https://github.com/Vnicius/numbiosis/tree/master/sistema-ponto-flutuante">Código</a>
             </div>
           </div>
         </div>
