--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="#">Site</a>
-              <a href="#">Código</a>
+              <a href="bissecao">Site</a>
+              <a href="https://github.com/Vnicius/numbiosis/tree/master/bissecao">Código</a>
             </div>
           </div>
         </div>
