--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="coversor">Site</a>
+              <a href="conversor">Site</a>
               <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
             </div>
           </div>
