--- a/conversor/index.html
+++ b/conversor/index.html
@@ -30,17 +30,17 @@
   <div class="containerFlex">
     <span>Decimal (10)</span>
     <input id="decimalInput"
-            type="number"
+            type="text"
             oninput="changeDecimal()"/>
 
     <span>Binário (2)</span>
     <input id="binaryInput"
-            type="number"
+            type="text"
             oninput="changeBinary()"/>
 
     <span>Octal (8)</span>
     <input id="octalInput"
-            type="number"
+            type="text"
             oninput="changeOctal()"/>
 
     <span>Hexadecimal (16)</span>
