--- a/bissecao/index.html
+++ b/bissecao/index.html
@@ -35,7 +35,7 @@
       <input id='exB' type="number">
       <span>Erro Mínimo</span>
       <input id='erro' type="number">
-      <span>Máximo de Interações</span>
+      <span>Máximo de Iterações</span>
       <input id='maxIt' type="number">
       <a class="waves-effect waves-light btn-large" onclick="plot()">Buscar Raiz</a>
       <div id="result"></div>
