--- a/bissecao/index.html
+++ b/bissecao/index.html
@@ -28,15 +28,15 @@
       </div>
     <div class="containerFlex">
       <span>Função</span>
-      <input id='funcao' type="text">
+      <input id='funcao' type="text" placeholder="Ex: -42 + 686.7*(1 - np.exp(-6*c/35))/c">
       <span>Extremo A</span>
-      <input id='exA' type="number">
+      <input id='exA' type="number" placeholder="Ex: 12">
       <span>Extremo B</span>
-      <input id='exB' type="number">
+      <input id='exB' type="number" placeholder="Ex: 16">
       <span>Erro Mínimo</span>
-      <input id='erro' type="number">
+      <input id='erro' type="number" placeholder="Ex: 1e-5">
       <span>Máximo de Iterações</span>
-      <input id='maxIt' type="number">
+      <input id='maxIt' type="number" placeholder="Ex: 100">
       <a class="waves-effect waves-light btn-large" onclick="plot()">Buscar Raiz</a>
       <div id="result"></div>
     </div>
