--- a/conversor/index.html
+++ b/conversor/index.html
@@ -31,22 +31,26 @@
     <span>Decimal (10)</span>
     <input id="decimalInput"
             type="text"
-            oninput="changeDecimal()"/>
+            oninput="changeDecimal()"
+            placeholder="Ex: 42"/>
 
     <span>Binário (2)</span>
     <input id="binaryInput"
             type="text"
-            oninput="changeBinary()"/>
+            oninput="changeBinary()"
+            placeholder="Ex: 101010"/>
 
     <span>Octal (8)</span>
     <input id="octalInput"
             type="text"
-            oninput="changeOctal()"/>
+            oninput="changeOctal()"
+            placeholder="Ex: 52"/>
 
     <span>Hexadecimal (16)</span>
     <input id="hexaInput"
             type="text"
-            oninput="changeHexa()"/>
+            oninput="changeHexa()"
+            placeholder="Ex: 2A"/>
           
   </div>
 </body>
