--- a/sistema-ponto-flutuante/index.html
+++ b/sistema-ponto-flutuante/index.html
@@ -29,11 +29,11 @@
     </div>
     <div class="containerFlex">
         <span>Precisão</span>
-        <input id='precisao' type="number">
+        <input id='precisao' type="number" placeholder="Ex: 3">
         <span>Limite Underflow</span>
-        <input id='underflow' type="number">
+        <input id='underflow' type="number" placeholder="Ex: -1">
         <span>Limite Overflow</span>
-        <input id='overflow' type="number">
+        <input id='overflow' type="number" placeholder="Ex: 1">
         <a class="waves-effect waves-light btn-large" onclick="plot()">Gerar Valores</a>
         <div id='quantidade'></div>
     </div>
