Link para o método de Newton

--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
         </div>
       </div>
 
+      <div class="col s12 m7">
+        <div class="card horizontal">
+          <div class="card-stacked">
+            <div class="card-content">
+              <span class="card-title grey-text text-darken-4">Newton-Raphson</span>
+              <p>
+                Algoritmo para cálculo de raizes de funções por meio do Método de Newton-Raphson.
+              </p>
+            </div>
+            <div class="card-action">
+              <a href="newton-raphson">Site</a>
+              <a href="https://github.com/Vnicius/numbiosis/tree/master/newton-raphson">Código</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 </body>
 </html>
