Adcionado as libs

--- a/bissecao/index.html
+++ b/bissecao/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bisseção</title>
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
+    <link rel="stylesheet" href="./../libs/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
 </head>
@@ -42,7 +41,7 @@
     </div>
 
     <div id="plotDiv"></div>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="./../libs/plotly/plotly-latest.min.js"></script>
     <script>
         function plot() {
             // pegar os valores dos inputs
