--- a/newton-raphson/index.html
+++ b/newton-raphson/index.html
@@ -7,10 +7,7 @@
     <title>Método Newton-Raphson</title>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="./../libs/materialize/css/materialize.min.css">
 </head>
 <body>
     <div class="navbar-fixed">
@@ -39,7 +36,7 @@
     </div>
 
     <div id="plotDiv"></div>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="./../libs/plotly/plotly-latest.min.js"></script>
     <script>
       function plot() {
         
