--- a/sistema-ponto-flutuante/index.html
+++ b/sistema-ponto-flutuante/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="./../libs/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="./../libs/plotly/plotly-latest.min.js"></script>
     <script src="js/main.js"></script>
     <title>Sistema de Ponto Flutuante</title>
 </head>
