Link para o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper teal lighten-2">
-          <a href="https://github.com/Vnicius/calculo-numerico"
+          <a href="https://github.com/Vnicius/numbiosis"
              class="brand-logo center"
              target="blank">
              Numbiosis
@@ -38,7 +38,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="conversor">Site</a>
+              <a href="conversor/index.html">Site</a>
               <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
             </div>
           </div>
@@ -57,7 +57,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="sistema-ponto-flutuante">Site</a>
+              <a href="sistema-ponto-flutuante/index.html">Site</a>
               <a href="https://github.com/Vnicius/numbiosis/tree/master/sistema-ponto-flutuante">Código</a>
             </div>
           </div>
@@ -75,7 +75,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="bissecao">Site</a>
+              <a href="bissecao/index.html">Site</a>
               <a href="https://github.com/Vnicius/numbiosis/tree/master/bissecao">Código</a>
             </div>
           </div>
@@ -92,7 +92,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a href="newton-raphson">Site</a>
+              <a href="newton-raphson/index.html">Site</a>
               <a href="https://github.com/Vnicius/numbiosis/tree/master/newton-raphson">Código</a>
             </div>
           </div>
