Eliminação de gauss start

--- a/index.html
+++ b/index.html
@@ -1,104 +1,122 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Numbiosis</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="./libs/materialize/css/materialize.min.css">>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Numbiosis</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./libs/materialize/css/materialize.min.css">
 </head>
+
 <body>
-    <div class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper teal lighten-2">
-          <a href="https://github.com/Vnicius/numbiosis"
-             class="brand-logo center"
-             target="blank">
-             Numbiosis
-          </a>
-          <!-- <ul id="nav-mobile" class="left hide-on-med-and-down">
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper teal lighten-2">
+        <a href="https://github.com/Vnicius/numbiosis" class="brand-logo center" target="blank">
+          Numbiosis
+        </a>
+        <!-- <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="sass.html">Repositório</a></li>
           </ul> -->
+      </div>
+    </nav>
+  </div>
+
+  <div class="cards-container">
+    <h2>Etapa 1</h2>
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Conversor de Bases Numéricas</span>
+            <p>
+              Conversor de números inteiros e de ponto flutuante para as bases: binária, octal, decimal e hexadecimal.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="conversor/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
+          </div>
         </div>
-      </nav>
+      </div>
     </div>
 
-    <div class="cards-container">
-      <h2>Etapa 1</h2>
-      <div class="col s12 m7">
-        <div class="card horizontal">
-          <div class="card-stacked">
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">Conversor de Bases Numéricas</span>
-              <p>
-                Conversor de números inteiros e de ponto flutuante 
-                para as bases: binária, octal, decimal e hexadecimal.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="conversor/index.html">Site</a>
-              <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
-            </div>
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Sistema de Ponto Flutuante</span>
+            <p>
+              Gerador de valores de ponto flutuante da base decimal utilizando o cálculo de valores de ponto flutuante para uma base, dado
+              um nível de limite e valores máximo e mínimo.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="sistema-ponto-flutuante/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/sistema-ponto-flutuante">Código</a>
           </div>
         </div>
       </div>
-
-      <div class="col s12 m7">
-        <div class="card horizontal">
-          <div class="card-stacked">
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">Sistema de Ponto Flutuante</span>
-              <p>
-                Gerador de valores de ponto flutuante da base decimal
-                utilizando o cálculo de valores de ponto flutuante para uma base,
-                dado um nível de limite e valores máximo e mínimo.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="sistema-ponto-flutuante/index.html">Site</a>
-              <a href="https://github.com/Vnicius/numbiosis/tree/master/sistema-ponto-flutuante">Código</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12 m7">
-        <div class="card horizontal">
-          <div class="card-stacked">
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">Bisseção</span>
-              <p>
-                Algoritmo para cálculo de raizes de funções por meio
-                do Método da Bisseção.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="bissecao/index.html">Site</a>
-              <a href="https://github.com/Vnicius/numbiosis/tree/master/bissecao">Código</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12 m7">
-        <div class="card horizontal">
-          <div class="card-stacked">
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">Newton-Raphson</span>
-              <p>
-                Algoritmo para cálculo de raizes de funções por meio do Método de Newton-Raphson.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="newton-raphson/index.html">Site</a>
-              <a href="https://github.com/Vnicius/numbiosis/tree/master/newton-raphson">Código</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Bisseção</span>
+            <p>
+              Algoritmo para cálculo de raizes de funções por meio do Método da Bisseção.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="bissecao/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/bissecao">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Newton-Raphson</span>
+            <p>
+              Algoritmo para cálculo de raizes de funções por meio do Método de Newton-Raphson.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="newton-raphson/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/newton-raphson">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="cards-container">
+    <h2>Etapa 2</h2>
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Eliminação de Gauss</span>
+            <p>
+              Conversor de números inteiros e de ponto flutuante para as bases: binária, octal, decimal e hexadecimal.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="eliminacao-gauss/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
