--- a/eliminacao-gauss/index.html
+++ b/eliminacao-gauss/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="../libs/materialize/css/materialize.min.css">
-  <script src="../libs/materialize/js/materialize.min.js"></script>
+  <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -23,22 +23,9 @@
     </nav>
     </div>
     <div class="containerFlex">
-      <span>Dimensões da Matriz</span>
-      <select>
-        <option value="2">2x2</option>
-        <option value="3">3x3</option>
-      </select>
-    </div>
-    <div>
-      <div class="input-field col s12">
-        <select multiple>
-          <option value="" disabled selected>Choose your option</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-        </select>
-        <label>Materialize Multiple Select</label>
-      </div>
+      <span class="span-text">Dimensões da Matriz Quadrada</span>
+      <input id="dim" type="number" maxlength="1" oninput="dimHandler()" placeholder="min: 2 | max: 8" />
+      <div id="matrix"></div>
     </div>
 </body>
 
