Adicionado: - Função para mostras as matrizes - Botão de ação

--- a/eliminacao-gauss/index.html
+++ b/eliminacao-gauss/index.html
@@ -25,7 +25,9 @@
     <div class="containerFlex">
       <span class="span-text">Dimensões da Matriz Quadrada</span>
       <input id="dim" type="number" maxlength="1" oninput="dimHandler()" placeholder="min: 2 | max: 8" />
-      <div id="matrix"></div>
+      <div id="matrix" class="matrix"></div>
+      <div id="btn" class="operation-button"></div>
+      <div id="steps"></div>
     </div>
 </body>
 
