Eliminação de Gauss compacta

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
       <div class="card horizontal">
         <div class="card-stacked">
           <div class="card-content">
-            <span class="card-title grey-text text-darken-4">Eliminação de Gauss</span>
+            <span class="card-title grey-text text-darken-4">Eliminação de Gauss Compacta</span>
             <p>
               Conversor de números inteiros e de ponto flutuante para as bases: binária, octal, decimal e hexadecimal.
             </p>
           </div>
           <div class="card-action">
-            <a href="eliminacao-gauss/index.html">Site</a>
+            <a href="eliminacao-gauss-compacta/index.html">Site</a>
             <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
           </div>
         </div>
