--- a/eliminacao-gauss-compacta/index.html
+++ b/eliminacao-gauss-compacta/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Eliminação de Gauss</title>
+  <title>Eliminação de Gauss Compacta</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="./css/styles.css">
@@ -18,7 +18,7 @@
     <nav>
       <div class="nav-wrapper teal lighten-2">
         <a href="https://github.com/Vnicius/numbiosis" class="brand-logo center" target="blank">
-          Eliminação de Gauss
+          Eliminação de Gauss Compacta
         </a>
     </nav>
     </div>
