Add Katex no html

--- a/eliminacao-gauss-compacta/index.html
+++ b/eliminacao-gauss-compacta/index.html
@@ -9,7 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./../libs/katex/katex.min.css">
   <link rel="stylesheet" href="../libs/materialize/css/materialize.min.css">
+  <script src="./../libs/katex/katex.min.js"></script>
   <script src="./js/index.js"></script>
 </head>
 
@@ -28,6 +30,7 @@
       <div id="matrix" class="matrix"></div>
       <div id="btn" class="operation-button"></div>
       <div id="steps"></div>
+      <div id="katex"></div>
     </div>
 </body>
 
