Adicionado divisão das funções de ajuda e pacote de Chlesky

--- a/eliminacao-gauss-compacta/index.html
+++ b/eliminacao-gauss-compacta/index.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="../libs/materialize/css/materialize.min.css">
   <script src="./../libs/katex/katex.min.js"></script>
   <script src="./js/index.js"></script>
+  <script src="./../js/inputsHelpers.js"></script>
+  <script src="./../js/katexHelpers.js"></script>
+  <script src="./../js/matrixHelpers.js"></script>
+  <script src="./../js/stepsHelpers.js"></script>
 </head>
 
 <body>
