--- a/cholesky/index.html
+++ b/cholesky/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./../libs/katex/katex.min.css">
     <link rel="stylesheet" href="../libs/materialize/css/materialize.min.css">
     <script src="./../libs/katex/katex.min.js"></script>
+    <script src="./../libs/math/math.min.js"></script>
     <script src="./js/index.js"></script>
     <script src="./../js/inputsHelpers.js"></script>
     <script src="./../js/katexHelpers.js"></script>
