Adicionado links da página inicial

--- a/index.html
+++ b/index.html
@@ -106,12 +106,63 @@
           <div class="card-content">
             <span class="card-title grey-text text-darken-4">Eliminação de Gauss Compacta</span>
             <p>
-              Conversor de números inteiros e de ponto flutuante para as bases: binária, octal, decimal e hexadecimal.
+              Separação de matrizes L e U pela Eliminação de Gauss Compacta.
             </p>
           </div>
           <div class="card-action">
             <a href="eliminacao-gauss-compacta/index.html">Site</a>
-            <a href="https://github.com/Vnicius/numbiosis/tree/master/conversor">Código</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/eliminacao-gauss-compacta">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Cholesky</span>
+            <p>
+              Cálculo do Fator de Cholesky de um matriz.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="cholesky/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/cholesky">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Jacobi</span>
+            <p>
+              Resolução de um sistema linear por meio do método de Jacobi.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="jacobi/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/jacobi">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Gauss-Seidel</span>
+            <p>
+              Resolução de um sistema linear por meio do método de Gauss-Seidel.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="gauss-seidel/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/gauss-seidel">Código</a>
           </div>
         </div>
       </div>
