--- a/index.html
+++ b/index.html
@@ -168,6 +168,60 @@
       </div>
     </div>
   </div>
+
+  <div class="cards-container">
+    <h2>Etapa 3</h2>
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Interpolador de Newton</span>
+            <p>
+              Demonstração do Algoritmo Interpolador de Newton.
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="interpolador-newton/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/interpolador-newton">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Regra de Quadratura de Gauss-Legendre</span>
+            <p>
+              Demonstração da Regra de Quadratura de Gauss-Legendre
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="regras-quadratura-gauss-legendre/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/regras-quadratura-gauss-legendre">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">Métodos de Runge-Kutta</span>
+            <p>
+              Demonstração dos Métodos de Runge-Kutta
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="runge-kutta/index.html">Site</a>
+            <a href="https://github.com/Vnicius/numbiosis/tree/master/runge-kutta">Código</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
