--- a/runge-kutta/index.html
+++ b/runge-kutta/index.html
@@ -30,7 +30,7 @@
     <div class="containerFlex">
         <input type="number" id="it" placeholder="Iterações" />
         <a class="waves-effect waves-light btn-large" style="margin: 10px;" onclick="heunHandler()">Método de Heun</a>
-        <a class="waves-effect waves-light btn-large" onclick="ptMedioHandler()">Método dos Ponto Médio</a>
+        <a class="waves-effect waves-light btn-large" onclick="ptMedioHandler()">Método do Ponto Médio</a>
         <div id="steps"></div>
     </div>
 </body>
